# Warehouse-Inventory-Management

./: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.bruno/: bruno.json  collection.bru
.bruno/environments/: local.json
.bruno/vendors/: Create Vendor.bru  Delete Vendor.bru  Get Vendor by ID.bru  Get Vendors.bru  Update Vendor.bru  collection.json
.bruno/vendors/contacts/: Create Contact.bru  Delete Contact.bru  Get All Contacts.bru  Get Contact by ID.bru  Update Contact.bru
src/: main.tsx
src-actix/: lib.rs  main.rs
src-actix/vendors/: mod.rs  vendors_data.rs  vendors_db.rs  vendors_endpoint.rs
src-actix/vendors/contacts/: contacts_data.rs  contacts_db.rs  contacts_endpoint.rs  mod.rs
src/assets/: test_po.json
src/assets/components/: AccountDropdown.tsx  FileChip.tsx  FileUploadInput.tsx  Footer.tsx  Navigation.tsx  Notification.tsx  PageForm.tsx  SearchableListBox.tsx  SortByDropdown.tsx  ThemeSwitcher.tsx  ViewSelector.tsx
src/assets/components/Extends/: ExtendedSwitch.tsx
src/assets/components/Inventory/: FiltersPanel.tsx  InventoryItem.tsx  InventoryList.tsx
src/assets/components/Modals/: POInventoryViewModal.tsx
src/assets/components/Purchases/: FilterByAccordionView.tsx  FilterByListView.tsx  FiltersPanel.tsx  PurchaseOrderItem.tsx  (+1 more)
src/assets/images/: Logo.tsx
src/assets/pages/: Dashboard.tsx  Inventory.tsx  Login.tsx  Purchases.tsx  Settings.tsx  SplitMachine.tsx  Vendors.tsx
src/assets/providers/: POInventoryViewModalProvider.tsx
src/assets/scss/: index.scss
src/assets/ts/: IconProperties.ts  Theme.ts
(+57 files in other folders)
