[package]
name = "warehouse"
version = "0.0.0"
edition = "2021"
build = "src-actix/build.rs"

[[bin]]
name = "warehouse"
path = "src-actix/main.rs"

[lib]
name = "warehouse_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = "4.9.0" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
pretty_env_logger = "0.5.0"
include_dir = "0.7.4"
walkdir = "2.5.0"
log = "0.4.22"
anyhow = "1.0.95"
vite-actix = "0.1.3"
database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib" }
sqlx = { version = "0.8.4", features = ["chrono", "json", "mysql", "derive", "runtime-tokio"] }
chrono = { version = "0.4.40", features = ["serde", "now", "clock"] }
serde_hash = { git = "https://github.com/Drew-Chase/serde_hash.git" }




[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"